--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 
   <section id="guestbook-container">
    <h2>Discussion</h2>
+   <form><!-- ... --></form>
+
+   <section id="guestbook"></section>
+
+ </section>
 
    <form id="leave-message">
      <label>Leave a message: </label>
