--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
 
   <section id="description-container">
       <h2>What we'll be doing</h2>
+      <p id="number-attending"></p>
       <p>Join us for a day full of Firebase Workshops and Pizza!</p>
   </section>
 
   <section id="guestbook-container">
+    <h2>Are you attending?</h2>
+     <button id="rsvp-yes">YES</button>
+     <button id="rsvp-no">NO</button>
+
+   <h2>Discussion</h2>
   </section>
 
   <section id="guestbook-container">
